<resources>
    <string name="app_name">mp4_part2</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiply">M</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_subtract">S</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_add">A</string>
    <string name="button_0">0</string>
    <string name="button_decimal">.</string>
    <string name="button_negative">(+/-)</string>
    <string name="button_equals">=</string>
    <string name="button_clear">clear</string>
    <string name="textView">0</string>
</resources>
